models translations added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -63,7 +63,32 @@ ru:
         restrict_dependent_destroy:
           has_one: 'Невозможно удалить запись, так как существует зависимость: %{record}'
           has_many: 'Невозможно удалить запись, так как существуют зависимости: %{record}'
-
+    models:
+      user:
+        one: Пользователь
+        few: Пользователя
+        other: Пользователей
+      comment:
+        one: Комментарий
+        few: Комментария
+        other: Комминтариев
+      page:
+        one: Страница
+        few: Страницы
+        other: Страниц
+      picture:
+        one: Картинка
+        few: Картинки
+        other: Картинок
+      site:
+        one: Сайт
+        few: Сайта
+        other: Сайтов
+      rate:
+        one: Рейтинг
+        few: Рейтинга
+        other: Рейтингов
+      video: Видео
   date:
     abbr_day_names:
     - Вс
