--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,3 +74,7 @@ en:
   comment:
     comments_at: 'comments'
   tags: Tags
+  activerecord:
+    models:
+      site: 'Sites'
+      comment: 'Comments'
