ru pluralization added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -86,6 +86,7 @@ ru:
         many: Пользователей
         other: Пользователя
       comment:
+        zero: Комментариев
         one: Комментарий
         few: Комментария
         many: Комментариев
