some translations added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,6 +60,7 @@ en:
     description: Description
     logo: Logo
     userName: User
+    moreInfo: More info
   page:
     enter:
       video: Add video
