--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -40,6 +40,7 @@ ru:
     description: Описание
     logo: Логотип
     userName: Пользователь
+    moreInfo: Подробнее
   page:
     enter:
       video: Добавьте видео
