--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,7 @@ en:
         ru: "Russian"
   comments:
     comment: 'Comments'
-    add: 'Add'
+    add: 'Leave comment'
     your_comment: 'Your comment'
   editor:
     dragPicture: 'Drag picture'
@@ -70,6 +70,13 @@ en:
       video: Add video
       text: Enter text
     clickToEdit: Click to add
+    create:
+      success: 'Page was successfully created'
+      problem: 'There was a problem creating page'
+    update:
+      success: 'Page was successfully updated'
+      problem:  'There was a problem updating page'
+    destroy: 'Page was successfully destroyed.'
   search:
     search_results: Search results
     results:
