--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,7 +12,7 @@ ru:
         ru: "Русский"
   comments:
     comment: 'Комментарии'
-    add: 'Добавить'
+    add: 'Оставить комментарий'
     your_comment: 'Ваш комментарий'
   editor:
     dragPicture: 'Перетяните картинку'
@@ -49,7 +49,14 @@ ru:
     enter:
       video: Добавьте видео
       text: Введите текст
+    create:
+      success: Создана новая страница
+      problem: Возникла проблема при создании страницы
+    update:
+      success: Страница успешно обновлена
+      problem: Возникла проблема при обновлении страницы
     clickToEdit: Нажмите для редактирования
+    destroy: Страница удалена
   search:
     search_results: 'Результаты поиска'
     results:
