some translations added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -57,6 +57,10 @@ ru:
       problem: Возникла проблема при обновлении страницы
     clickToEdit: Нажмите для редактирования
     destroy: Страница удалена
+    dragVideo: Перетащите для вставки видео
+    dragText: Перетащити для вставки текста
+    addPage: Нажмите для добавления страницы
+    save: Нажмите чтобы сохранить
   search:
     search_results: 'Результаты поиска'
     results:
