--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,10 @@ en:
       success: 'Page was successfully updated'
       problem:  'There was a problem updating page'
     destroy: 'Page was successfully destroyed.'
+    dragVideo: 'Drag video'
+    dragText: Drag text
+    addPage: Add page
+    save: Save
   search:
     search_results: Search results
     results:
