--- a/README.rdoc
+++ b/README.rdoc
@@ -22,7 +22,7 @@ Things you may want to cover:
 * Deployment instructions
 
 * ...
-
+main branch - yana_branch, master is out of date
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
