--- a/README.rdoc
+++ b/README.rdoc
@@ -37,6 +37,7 @@ Things you may want to cover:
 
 * ...
 
+main branch - yana_branch, master is out of date
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
